--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
     </header>
     <div class="container">
-        <h1>Join the best GYM of Chandigarh </h1>
+        <h1>Join the best GYM of Chandigarh</h1>
         <!-- <h1>now</h1> -->
         <form action="noaction.php">
             <div class="form-group">
@@ -194,9 +194,7 @@
 
         </form>
     </div>
-
-
-
+    <!-- End of the programme  -->
 </body>
 
 </html>
